Find article by title
* Add endpoint to openapi
* Change name query parameter
